--- a/style_4.css
+++ b/style_4.css
@@ -1,11 +1,11 @@
 body{
-	font-family: open sans ,sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	background-color: black;
 }
 .container{
 	width: 1200px;
 	height: 730px;
-	background-image:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(bgImg.jpg);
+	background-image:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3));
 	margin: 20px auto;
 	margin-top: 25px;
 }
